Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9446

query_test.test_compressed_formats.TestReadZtsdLibCompressedFile fails on S3

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 3.4.0
    • None
    • Backend

    Description

      On the S3 configuration, query_test.test_compressed_formats.TestReadZtsdLibCompressedFile is encountering the following error:

       

      query_test/test_compressed_formats.py:325: in test_query_large_file
          result = self.client.execute("select count(*) from %s" % self.COMPRESSED_TABLE_NAME)
      common/impala_connection.py:205: in execute
          return self.__beeswax_client.execute(sql_stmt, user=user)
      beeswax/impala_beeswax.py:187: in execute
          handle = self.__execute_query(query_string.strip(), user=user)
      beeswax/impala_beeswax.py:365: in __execute_query
          self.wait_for_finished(handle)
      beeswax/impala_beeswax.py:386: in wait_for_finished
          raise ImpalaBeeswaxException("Query aborted:" + error_log, None)
      E   ImpalaBeeswaxException: ImpalaBeeswaxException:
      E    Query aborted:Rejected query from pool default-pool: Error during scheduling: Invalid file descriptor compression code: 10

      The error comes from here:

       

      https://github.com/apache/impala/blob/master/be/src/util/flat_buffer.cc#L63

      Attachments

        Activity

          People

            Xiaomeng Zhang Xiaomeng Zhang
            joemcdonnell Joe McDonnell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: