IMPALA-9446: Fix bug that impala failed to read zstd file on s3

S3 filesystem doesn't have a block concept, so scheduler splits each
file into a smaller scan ranges. Adding ZSTD as a case in the switch
statement to add support for zstd.

Testing done:
In mini-cluster, read external table located on s3 zstd file.
Run end to end test successfully on s3.

Change-Id: I13f8837fda7454ddb4bb47d20a675d6315a3462d
Reviewed-on: http://gerrit.cloudera.org:8080/15391
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Tim Armstrong <tarmstrong@cloudera.com>